@@ -49,6 +49,7 @@ Version 1.0.xxx (Oktober xxth 2013)
 - Implemented: Dashboard, clicking on the Temperature/UV/Wind/Rain/Baro/Lux icons displays the log
 - Implemented: Temperature Average is now being logged, needed later for Degree Days
 - Implemented: Eventsystem, Utility Device support for Energy,Gas,AirQuality,RFXSensor(Volt/AD),RFXMeter
+- Changed: Dashboard Smart meter display in mobile mode
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
